# neuraflux1

./: .gitignore  README.md  dashboard_anywhere.py  grammar_demo.py  grammar_test.py  open_dashboard.bat  package-lock.json  package.json  pyproject.toml  requirements.txt  run_test.bat  setup.py  start-server.js  test_grammar.js  test_grammar_model.py  theme.json  vercel.json
api/: chat.ts  index.ts  tsconfig.json
attached_assets/: Pasted--Due-to-technical-issues-the-search-service-is-temporarily-unavailable-Here-s-how-to-train-N-1741385011590.txt  Pasted--Prompt-for-Building-a-Compact-High-Performance-Language-Model-1-2M-Parameters-Model-Name-1741383131642.txt
client/src/components/: ChatInput.tsx
client/src/components/chat/: message-input.tsx  (+1 more)
client/src/hooks/: useMessages.tsx
client/src/pages/: chat.tsx
server/: index.ts  requirements.txt  routes.ts  storage.ts  test_model.py  web_ui.py
server/model/: README.md  enhanced_visual.py  error_log.txt  fix_dashboard.py  generate_preference_data.py  nanorag.py  nanorag_lite.py  run_training_with_visuals.py  simple_visual.py  test_python.py  tokenizer.py  training.py  validate_env.py  visualization.py  visualize.py  visualize_training_progress.py
server/model/data/: preference_dataset.py  train.txt
server/model/mini_llm/: README.md  generate.py  generate_math_solutions.py  mock_generate.py  tokenizer_test_output.txt  train.py
server/model/visualizations/: simple_chart.html  training_chart.html  training_data.json  training_log.csv  training_metrics.csv
shared/: schema.ts
visualizations/: dashboard.html
(+57 files in other folders)
