[project]
name = "neuraflux-slm"
version = "0.1.0"
description = "A small language model implementation from scratch"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "torch>=2.6.0",
    "transformers>=4.37.0",
    "tokenizers>=0.15.0",
    "datasets>=2.15.0",
    "sentencepiece>=0.1.99",
    "scikit-learn>=1.3.2",
    "tqdm>=4.66.1",
    "evaluate>=0.4.1",
    "accelerate>=0.25.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
